# ReadWordHistogram

./: CMakeLists.txt  README.md
ReadWordHistogram/: CMakeLists.txt  IHistogram.h  ITextHandler.h  ReadWordHistogram.cpp  ReadWordHistogram.h  controlbuttons.cpp  controlbuttons.h  itemhistogram.cpp  itemhistogram.h  main.qml  resources.qrc  texthandler.cpp  texthandler.h
